feat: added rendering for example table and removed scrollbars on sidebar

--- a/source/VizGurka/Pages/Features/Index.cshtml
+++ b/source/VizGurka/Pages/Features/Index.cshtml
@@ -92,6 +92,10 @@
           }
         }
       </ul>
+      @if (!string.IsNullOrEmpty(scenario.Examples))
+      {
+        @Html.Raw(Markdown.ToHtml(scenario.Examples, pipeline))
+      }
     </section>
   }
   @foreach (var rule in Model.Feature.Rules)
@@ -166,6 +170,10 @@
               }
             }
           </ul>
+          @if (!string.IsNullOrEmpty(scenario.Examples))
+          {
+            @Html.Raw(Markdown.ToHtml(scenario.Examples, pipeline))
+          }
         </section>
       }
     </section>
