refactor: VizGurka css classes.
Refs: #16

--- a/source/VizGurka/Pages/Features/Index.cshtml
+++ b/source/VizGurka/Pages/Features/Index.cshtml
@@ -73,7 +73,7 @@
           }
         </p>
       </div>
-      <hr/>
+      <hr class="divider" />
       @if (!string.IsNullOrEmpty(scenario.Description))
       {
         <div class="description">
@@ -113,7 +113,7 @@
       {
         <section class="scenario background">
           <h3>Background: @rule.Background.Name</h3>
-          <hr/>
+          <hr class="divider"/>
           @if (!string.IsNullOrEmpty(rule.Background.Description))
           {
             <div class="description">
@@ -151,7 +151,7 @@
               }
             </p>
           </div>
-          <hr/>
+          <hr class="divider"/>
           @if (!string.IsNullOrEmpty(scenario.Description))
           {
             <div class="description">
