--- a/source/VizGurka/Pages/Features/Index.cshtml
+++ b/source/VizGurka/Pages/Features/Index.cshtml
@@ -3,7 +3,6 @@
 
 @{
   Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
-  var pipeline = new MarkdownPipelineBuilder().UseAdvancedExtensions().Build();
 }
 
 <header>
@@ -39,7 +38,7 @@
       @if (!string.IsNullOrEmpty(Model.Feature.Background.Description))
       {
         <div class="description">
-          @Html.Raw(Markdown.ToHtml(Model.Feature.Background.Description, pipeline))
+          @Html.Raw(Markdown.ToHtml(Model.Feature.Background.Description, Model.Pipeline))
         </div>
       }
       <ul class="step-list">
@@ -50,7 +49,7 @@
           </li>
           if (!string.IsNullOrEmpty(step.Table))
           {
-            @Html.Raw(Markdown.ToHtml(step.Table, pipeline))
+            @Html.Raw(Markdown.ToHtml(step.Table, Model.Pipeline))
           }
         }
       </ul>
@@ -77,7 +76,7 @@
       @if (!string.IsNullOrEmpty(scenario.Description))
       {
         <div class="description">
-          @Html.Raw(Markdown.ToHtml(scenario.Description, pipeline))
+          @Html.Raw(Markdown.ToHtml(scenario.Description, Model.Pipeline))
         </div>
       }
       <ul class="step-list">
@@ -88,13 +87,13 @@
           </li>
           if (!string.IsNullOrEmpty(step.Table))
           {
-            @Html.Raw(Markdown.ToHtml(step.Table, pipeline))
+            @Html.Raw(Markdown.ToHtml(step.Table, Model.Pipeline))
           }
         }
       </ul>
       @if (!string.IsNullOrEmpty(scenario.Examples))
       {
-        @Html.Raw(Markdown.ToHtml(scenario.Examples, pipeline))
+        @Html.Raw(Markdown.ToHtml(scenario.Examples, Model.Pipeline))
       }
     </section>
   }
@@ -106,7 +105,7 @@
       @if (!string.IsNullOrEmpty(rule.Description))
       {
         <div class="description">
-          @Html.Raw(Markdown.ToHtml(rule.Description, pipeline))
+          @Html.Raw(Markdown.ToHtml(rule.Description, Model.Pipeline))
         </div>
       }
       @if (rule.Background is not null)
@@ -117,7 +116,7 @@
           @if (!string.IsNullOrEmpty(rule.Background.Description))
           {
             <div class="description">
-              @Html.Raw(Markdown.ToHtml(rule.Background.Description, pipeline))
+              @Html.Raw(Markdown.ToHtml(rule.Background.Description, Model.Pipeline))
             </div>
           }
           <ul class="step-list">
@@ -128,7 +127,7 @@
               </li>
               if (!string.IsNullOrEmpty(step.Table))
               {
-                @Html.Raw(Markdown.ToHtml(step.Table, pipeline))
+                @Html.Raw(Markdown.ToHtml(step.Table, Model.Pipeline))
               }
             }
           </ul>
@@ -155,7 +154,7 @@
           @if (!string.IsNullOrEmpty(scenario.Description))
           {
             <div class="description">
-              @Html.Raw(Markdown.ToHtml(scenario.Description, pipeline))
+              @Html.Raw(Markdown.ToHtml(scenario.Description, Model.Pipeline))
             </div>
           }
           <ul class="step-list">
@@ -166,13 +165,13 @@
               </li>
               if (!string.IsNullOrEmpty(step.Table))
               {
-                @Html.Raw(Markdown.ToHtml(step.Table, pipeline))
+                @Html.Raw(Markdown.ToHtml(step.Table, Model.Pipeline))
               }
             }
           </ul>
           @if (!string.IsNullOrEmpty(scenario.Examples))
           {
-            @Html.Raw(Markdown.ToHtml(scenario.Examples, pipeline))
+            @Html.Raw(Markdown.ToHtml(scenario.Examples, Model.Pipeline))
           }
         </section>
       }
