--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -21,7 +21,7 @@
             <a href="@Url.Page("/Features/Index", new { id = feature.Id })">
               <img src="~/icons/@(IconHelper.GetStatusIcon(feature.Status)).svg"
                    alt="icon to represent the test result"/>
-              <h3>@feature.Name</h3>
+              <h4 class="feature-name">@feature.Name</h4>
             </a>
           </div>
           <div class="feature-dropdown-content">
