feat: you can now click on a scenario to highlight it and get a targeted frame around.

--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -78,6 +78,7 @@
 
 @section Scripts
 {
+  <script src="~/js/scenario-highlighting.js"></script>
   <script src="~/js/dropdown.js"></script>
   <script src="~/js/sidebar.js"></script>
 }
