--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -3,25 +3,44 @@
 
   var testRun = TestrunReader.ReadLatestRun();
   var product = testRun.Products.FirstOrDefault();
+  var testRunDateTime = DateTime.Parse(testRun.DateAndTime);
   ViewData["Title"] = testRun.Name;
 }
 
 <div class="wrapper">
   <aside class="sidebar" id="sidebar">
-    <search>
-      <label for="feature-search">Search for a feature</label>
-      <input type="search" id="feature-search"/>
-    </search>
+    <div class="filter-container">
+      <div class="filter-heading">
+        <h2>@testRun.Name</h2>
+        <span>@testRunDateTime.ToString("dd MMMM yyyy HH:mm")</span>
+      </div>
+      <div class="filter-wrapper">
+        <search>
+          <label for="feature-search">Search:</label>
+          <input type="search" id="feature-search"/>
+        </search>
+        <div class="select-container">
+          <label for="filter-select">Filter:</label>
+          <select name="filter" id="filter-select">
+            <option value="">--No Filter--</option>
+            <option value="passed">Passed</option>
+            <option value="failed">Failed</option>
+            <option value="pending">Pending</option>
+          </select>
+        </div>
+      </div>
+      <hr/>
+    </div>
     <ul class="feature-list">
       @foreach (var feature in product.Features)
       {
-        <li>
+        <li class="@(IconHelper.GetStatusIcon(feature.Status))">
           <div class="feature-item">
             <span role="button" class="feature-dropdown"><i class="arrow right"></i></span>
             <a href="@Url.Page("/Features/Index", new { id = feature.Id })">
               <img src="~/icons/@(IconHelper.GetStatusIcon(feature.Status)).svg"
                    alt="icon to represent the test result"/>
-              <h4 class="feature-name">@feature.Name</h4>
+              <h5 class="feature-name">@feature.Name</h5>
             </a>
           </div>
           <div class="feature-dropdown-content">
