--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -10,10 +10,8 @@
 <div class="wrapper">
   <aside class="sidebar" id="sidebar">
     <div class="filter-container">
-      <div class="filter-heading">
-        <h2>@testRun.Name</h2>
-        <span>@testRunDateTime.ToString("dd MMMM yyyy HH:mm")</span>
-      </div>
+      <h2>@testRun.Name</h2>
+      <span>Generated @testRunDateTime.ToString("dd MMMM yyyy HH:mm")</span>
       <div class="filter-wrapper">
         <search>
           <label for="feature-search">Search:</label>
