--- a/source/VizGurka/Pages/Shared/_Layout.cshtml
+++ b/source/VizGurka/Pages/Shared/_Layout.cshtml
@@ -12,11 +12,11 @@
 <nav class="navigation">
   <img src="~/favgurka.png" alt="icon for SpecGurka">
   <hr/>
-  <a asp-page="/Index">
+  <a href="@Url.Page("/Index")">
     <img src="~/icons/test.svg" alt="test-glass icon">
   </a>
   <hr/>
-  <a asp-page="/Index">
+  <a href="@Url.Page("/Analytics/Index")">
     <img src="~/icons/analytics.svg" alt="analytics icon">
   </a>
 </nav>
