--- a/source/VizGurka/Pages/Features/Index.cshtml
+++ b/source/VizGurka/Pages/Features/Index.cshtml
@@ -11,16 +11,29 @@
          alt="icon to represent the test result"/>
     <h1>@Model.Feature.Name</h1>
   </div>
-  <span
-    class="test-result-message">
-    @(Model.Feature.Status switch
-    {
-      Status.Passed => $"The tests passed in {TimeSpan.Parse(Model.Feature.TestDuration).TotalSeconds:F3} sec",
-      Status.Failed => $"The tests did not pass in {TimeSpan.Parse(Model.Feature.TestDuration).TotalSeconds:F3} sec",
-      Status.NotImplemented => "Not implemented",
-      _ => "There was an error reading the status of the feature"
-    })
-  </span>
+  <div class="status-heading">
+    <span class="test-result-message">
+      @(Model.Feature.Status switch
+      {
+        Status.Passed => "Passed",
+        Status.Failed => "Failed",
+        Status.NotImplemented => "Not implemented",
+        _ => "There was an error reading the status of the feature"
+      })
+    </span>
+    <div class="test-time">
+      @{
+        var duration = TimeSpan.Parse(Model.Feature.TestDuration);
+      }
+      @if (duration.TotalSeconds > 0)
+      {
+        <img src="~/icons/clock.svg" alt=""/>
+        <span class="test-result-message">
+          @DurationHelper.FormatDuration(Model.Feature.TestDuration)
+        </span>
+      }
+    </div>
+  </div>
 </header>
 <div class="feature-wrapper">
   @if (Model.Feature.Description is not null)
@@ -75,7 +88,7 @@
                alt="icon to represent the test result"/>
           <h3>@scenario.Name</h3>
         </div>
-        <p class="test-result-message">
+        <div class="test-time">
           @if (scenario.Status == Status.NotImplemented)
           {
             <span>Not implemented</span>
@@ -83,9 +96,9 @@
           else
           {
             <img src="~/icons/clock.svg" alt=""/>
-            <span>@($"{TimeSpan.Parse(scenario.TestDuration).TotalSeconds:F3} sec")</span>
+            <span>@(DurationHelper.FormatDuration(scenario.TestDuration))</span>
           }
-        </p>
+        </div>
       </div>
       <hr class="divider" />
       @if (!string.IsNullOrEmpty(scenario.Description))
@@ -177,7 +190,7 @@
                    alt="icon to represent the test result"/>
               <h3>@scenario.Name</h3>
             </div>
-            <p class="test-result-message">
+            <div class="test-time">
               @if (scenario.Status == Status.NotImplemented)
               {
                 <span>Not implemented</span>
@@ -185,9 +198,9 @@
               else
               {
                 <img src="~/icons/clock.svg" alt=""/>
-                <span>@($"{TimeSpan.Parse(scenario.TestDuration).TotalSeconds:F3} sec")</span>
+                <span>@(DurationHelper.FormatDuration(scenario.TestDuration))</span>
               }
-            </p>
+            </div>
           </div>
           <hr class="divider"/>
           @if (!string.IsNullOrEmpty(scenario.Description))
