--- a/source/VizGurka/wwwroot/css/vizgurka.css
+++ b/source/VizGurka/wwwroot/css/vizgurka.css
@@ -145,6 +145,7 @@ th{
   border: 1px solid black;
   border-bottom: 3px solid black;
   padding: 0.5rem;
+  background-color: lightblue;
   font-weight: bold;
 }
 
@@ -194,4 +195,16 @@ body.dragging {
   background-color: #FFFFFF;
   padding: 1rem;
   margin-bottom: 1rem;
+}
+
+.test-time{
+  color: #696161;
+  display: flex;
+  align-items: end;
+  gap: 2px;
+  white-space: nowrap;
+}
+
+.test-time img{
+  margin-bottom: 2px;
 }
