scenario-outline support, docker support, frontend
* feat: dropdown for a feature, do show all scenarios inside that one.

Refs: #7

* feat: did a super simple demo of how the new proccess can work

* chore: upgraded packages for GenGurka and ReqnrollDemo.Spec

Refs: #14

* feat: function to convert an example for scenario-outlines into a markdowntable.

Refs: #16

* feat: examples added for a scenario if they are present/if they are a scenario-outline

* feat: added rendering for example table and removed scrollbars on sidebar

* feat: added support for adding time together for examples and scenarios with the same name.

This might need refactoring later. Solved the problem with adding time when test is ran as a scenario-outline. And now it matches based on steps also, because some scenarios had the same name, and then some became without time.

Refs: #16

* refactor: VizGurka css classes.

Refs: #16

* refactor: small refactorings.

* feat: toggle to see the error message of a failed step.

* refactor: rename icons

* feat: you can now click on a scenario to highlight it and get a targeted frame around.

* feat/refactor: refactored the markdown to html and made the target shadow different colors based on the status of the scenario.

* feat: filter options for features.

this includes having a filter and searching at the same time.

Refs: #17

* refactor: rewrote failing tests.

* refactor: changed small things in alot of files, changed some styling faults.

* refactor: small refactorings.

* feat: analytics page with table that shows the slowest scenarios.

* feat: tooltips and fixes.

Tooltips were requested by a potential user, so i added it to backgrounds and rules. Also fixed som alignment issues with icons.

* chore: update README.md

* feat: added some data to show a difference between regular scenarios and scenario-outlines.

* feat: added Dockerfile

you can now create a docker image from the fr

--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml.css
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml.css
@@ -2,18 +2,25 @@
   background-color: #FFFFFF;
   min-height: 100vh;
   min-width: 0;
-  max-width: 600px;
+  max-width: 800px;
   overflow: hidden;
   white-space: nowrap;
   padding-left: 0.5rem;
-  padding-top: 0.5rem;
   max-height: 100vh;
   overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  position: relative;
+}
+
+.sidebar::-webkit-scrollbar{
+  display: none;
 }
 
 .resizer{
   border-right: solid 5px #CEC2C2;
   cursor: ew-resize;
+  z-index: 1000;
 }
 
 .wrapper{
@@ -22,18 +29,22 @@
 
 .main{
   flex: 1;
+  z-index: 1000;
 }
 
-search{
+search, .select-container {
   display: flex;
-  font-size: 1.25rem;
   flex-direction: column;
-  margin-bottom: 1rem;
-  max-width: 250px;
+  width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-search label{
-  font-weight: bold;
+search input, .select-container select {
+  width: 250px;
+  padding: 0.25rem;
+  box-sizing: border-box;
+  height: 2rem;
 }
 
 .arrow{
@@ -49,4 +60,32 @@ search label{
 
 .down{
   transform: rotate(45deg);
+}
+
+.filter-wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  max-width: 500px;
+}
+
+.filter-container{
+  overflow: hidden;
+  position: fixed;
+  display: flex;
+  width: 100%;
+  z-index: 10;
+  background-color: #FFFFFF;
+  flex-direction: column;
+}
+
+.feature-list{
+  margin-top: 8rem
+}
+
+.filter-container > hr {
+  border: none;
+  height: 1px;
+  width: 100%;
+  background-color: #CEC2C2;
 }
