--- a/source/VizGurka/wwwroot/css/vizgurka.css
+++ b/source/VizGurka/wwwroot/css/vizgurka.css
@@ -129,32 +129,44 @@ main {
   display: block;
 }
 
-.step-list table{
+table{
   border-collapse: collapse;
   border: 2px solid black;
   margin: 1rem 0;
 }
 
-.step-list td{
+td{
   border: 1px solid black;
   text-align: left;
   padding: 0.5rem;
 }
 
-.step-list th{
+th{
   border: 1px solid black;
   border-bottom: 3px solid black;
   padding: 0.5rem;
+  background-color: lightblue;
   font-weight: bold;
 }
 
 :target{
   background-color: #FFFFFF;
-  box-shadow: 0 0 10px rgba(0, 255, 0, 0.4);
-
   /*this is for the selector to not be at the top of the screen when clicking*/
   scroll-margin-top: 20vh;
 }
+
+:target.passed{
+  box-shadow: 0 0 10px rgba(0, 255, 0, 0.4);
+}
+
+:target.failed{
+  box-shadow: 0 0 10px rgb(237,51,59);
+}
+:target.pending{
+  box-shadow: 0 0 10px rgb(246,211,45);
+}
+
+
 .test-not-passed{
   text-decoration: underline;
   text-decoration-color: red;
@@ -183,4 +195,29 @@ body.dragging {
   background-color: #FFFFFF;
   padding: 1rem;
   margin-bottom: 1rem;
+}
+
+.test-time{
+  color: #696161;
+  display: flex;
+  align-items: end;
+  gap: 2px;
+  white-space: nowrap;
+}
+
+.test-time img{
+  margin-bottom: 2px;
+}
+
+.main-description > p{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.main-description > p:first-of-type{
+  margin-top: 0;
+}
+
+.scenario-heading > img{
+  margin-bottom: 4px;
 }
