--- a/source/VizGurka/Pages/Features/Index.cshtml.css
+++ b/source/VizGurka/Pages/Features/Index.cshtml.css
@@ -17,6 +17,7 @@ header > div {
   display: flex;
   align-items: end;
   gap: 2px;
+  white-space: nowrap;
 }
 
 .scenario .test-result-message{
@@ -37,7 +38,7 @@ header > div {
   padding: 0;
 }
 
-.scenario > hr {
+.divider {
   border: none;
   height: 1px;
   width: 100%;
@@ -48,7 +49,6 @@ header > div {
   margin-top: 0.5rem;
 }
 
-/*todo: this scrolls a bit to long and hides the heading.*/
 .feature-wrapper {
   border-top: none;
   background-color: #F2F2F2;
@@ -56,8 +56,12 @@ header > div {
   /*todo: this need adjusting when done*/
   max-height: calc(100vh - 6rem);
   padding: 1rem;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-
+.feature-wrapper::-webkit-scrollbar{
+  display: none;
+}
 .rule > hr{
   margin-bottom: 1rem;
 }
@@ -76,4 +80,35 @@ section{
 
 .main-description{
   max-width: 70ch;
+}
+
+.view-error{
+  text-decoration: underline;
+  color: #696161;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
+.error-message {
+  display: none;
+}
+
+.toggle-error:checked + .view-error + .error-message {
+  display: block;
+  background-color: #FFFFFF;
+  border: solid red 1px;
+  padding: 0.5rem
+}
+
+.scenario-heading{
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.status-heading{
+  display: flex;
+  align-items: end;
+  gap:0;
+  flex-direction: column;
 }
